force-app/main/default/objects/Trade_Up_Program_Utility__mdt/Trade_Up_Program_Utility__mdt.object-meta.xml
<CustomObject>
    <description>To store all miscellaneous details for Trade Up Program</description>
    <label>Trade Up Program Utility</label>
    <pluralLabel>Trade Up Program Utilities</pluralLabel>
</CustomObject>