force-app/main/default/objects/Trade_Up_Program_Utility__mdt/fields/Capacity_Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Lower_Bound__c</fullName>
    <description>Quantity range for Discount. Used for calculating Suggested discount to maximize ACV for Trade Up Program</description>
    <label>Capacity - Lower Bound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>