force-app/main/default/objects/Trade_Up_Program_Utility__mdt/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Pre defined Discount based on Capacity. For calculating Suggested discount to maximize ACV for Trade Up Program</description>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>